# smart-media

./: bintray-ffmpeg.gradle  bintray-media-player.gradle  build.gradle  common-setting.gradle  config.gradle  settings.gradle
app/: build.gradle
app/src/androidTest/java/com/smart/demo/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/java/com/smart/demo/: AppApplication.java  MainActivity.java  TestActivity.java  Utils.java
app/src/main/java/com/smart/demo/seekbar/: MusicSeekBar.java  SeekChangeListener.java  SeekParams.java
app/src/main/res/layout/: act_test.xml  activity_main.xml
app/src/main/res/values/: attrs.xml  colors.xml  strings.xml
app/src/main/res/xml/: network_security_config.xml
app/src/test/java/com/smart/demo/: ExampleUnitTest.java
distribution/: CMakeLists.txt
gradle/wrapper/: gradle-wrapper.properties
media-player/: build.gradle
media-player/src/androidTest/java/com/smart/media/player/: ExampleInstrumentedTest.java
media-player/src/main/: AndroidManifest.xml
media-player/src/main/cpp/: CMakeLists.txt
media-player/src/main/cpp/common/: constant.h  log_utils.h  s_error.h
media-player/src/main/cpp/include/ffmpeg/openssl/: opensslconf.h
media-player/src/main/cpp/music_player/: CMakeLists.txt
media-player/src/main/cpp/music_player/android/: jni_player_call.cpp  jni_player_call.h  native_music_player.cpp
media-player/src/main/cpp/music_player/core/: media_core.cpp  media_core.h
media-player/src/main/cpp/music_player/entity/: player_status.cpp  player_status.h
media-player/src/main/cpp/music_player/handler/: audio_handler.cpp  audio_handler.h  ffmpeg_music_handler.cpp  ffmpeg_music_handler.h
media-player/src/main/cpp/music_player/queue/: avpacket_queue.cpp  avpacket_queue.h
media-player/src/main/cpp/soundtouch/: CMakeLists.txt  soundtouch_wrapper.cpp  soundtouch_wrapper.h
media-player/src/main/java/com/smart/media/player/: SmartBasePlayer.java  SmartMusicPlayer.java
media-player/src/main/java/com/smart/media/player/bean/: InfoBean.java
media-player/src/main/java/com/smart/media/player/enums/: InfoCode.java
media-player/src/main/java/com/smart/media/player/interf/: INativePlayer.java  IPlayer.java  ISmartPlayer.java
media-player/src/main/java/com/smart/media/player/natives/: NativeMusicPlayer.java  NativePlayerBase.java
media-player/src/main/res/values/: strings.xml
media-player/src/test/java/com/smart/media/player/: ExampleUnitTest.java
